--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "~4.16.1",
     "mongoose": "^7.1.1",
     "morgan": "~1.9.1",
+    "musicbrainz-api": "^0.10.3",
     "node-fetch": "2",
     "uid2": "^1.0.0"
   }
