--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "mongoose": "^7.1.1",
     "morgan": "~1.9.1",
     "musicbrainz-api": "^0.10.3",
+    "node-cron": "^3.0.2",
     "node-fetch": "2",
     "uid2": "^1.0.0"
   }
