--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "musicbrainz-api": "^0.10.3",
     "node-cron": "^3.0.2",
     "node-fetch": "2",
+    "nodemailer": "^6.9.2",
     "uid2": "^1.0.0"
   }
 }
